# iris-vector-rag

./: .clinerules  .coveragerc  .coveragerc.ci  .dockerignore  .env.example  .flake8  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .roomodes  1000_DOCUMENT_TESTING.md  100K_INGESTION_DATA_FIXES_COMPLETE.md  100K_PLAN_STATUS.md  =0.21.0  AGENTS.md  ARCHIVE_DELETION_SPEC.md  BACKLOG.md  BASIC_RAG_RAGAS_DEBUGGING_SUMMARY.md  BENCHMARK_EXECUTION_PLAN.md  BIOBERT_OPTIMIZATION_PLAN.md  BRANCH_DEPLOYMENT_CHECKLIST.md  CHANGELOG.md  CHUNKING_STRATEGY_AND_USAGE.md  CHUNK_RETRIEVAL_SQL_FIX_COMPLETE.md  CLAUDE.md  CLEANUP_LIST.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_CURRENT.md  COLBERT_PIPELINE_FIX_SUMMARY.md  COMMIT_MESSAGE.md  COMMIT_STRATEGY.md  COMPREHENSIVE_1000_PMC_IRIS_RAG_VALIDATION_REPORT.md  COMPREHENSIVE_50K_EVALUATION_STATUS.md  COMPREHENSIVE_GENERALIZED_RECONCILIATION_DESIGN.md  COMPREHENSIVE_PIPELINE_VALIDATION_REPORT.md  COMPREHENSIVE_SCALING_EVALUATION_SUMMARY.md  CONTEXT_REDUCTION_STRATEGY.md  CONTRIBUTING.md  CRAG_FIX_SUMMARY.md  (+346 more)
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.roo/: mcp.json
.sisyphus/: ralph-loop.local.md
adapters/: rag_templates_bridge.py
analysis/: graphrag_effectiveness_analysis.py  quick_db_check.py
archived_pipelines/: README.md
basic_rag/: __init__.py  pipeline.py  pipeline_chunked_vector.py  pipeline_direct_sql.py  pipeline_file_vector.py  pipeline_file_vector.py.pre_table_fix  pipeline_final.py  pipeline_fixed.py  pipeline_jdbc.py  pipeline_jdbc_v2.py  pipeline_jdbc_v2.py.pre_table_fix  pipeline_minimal_fixed.py  pipeline_native_vector.py  pipeline_refactored.py  pipeline_simple.py  pipeline_stored_proc.py  pipeline_temp_table.py  pipeline_temp_table.py.pre_table_fix  pipeline_v2.py  pipeline_v2.py.pre_table_fix  pipeline_v2_fixed.py  pipeline_v2_fixed.py.pre_table_fix  pipeline_vector.py
benchmarks/: performance_report_20250619_212027.json  performance_report_20250619_213835.json
bug_reproductions/: README.md  bug1_parameter_binding.py  bug2_hnsw_varchar.py  bug3_vector_driver_support.py  bug4_stored_procedures.py
chunking/: chunking_schema.sql  direct_chunking_final.py  direct_v2_chunking_service.py  direct_v2_chunking_service_simple.py  enhanced_chunking_service.py  schema_clean.sql  update_v2_vectors.py
colbert/: __init__.py  doc_encoder.py  pipeline.py  pipeline.py.pre_table_fix  pipeline_optimized.py  pipeline_original.py  pipeline_v2.py  query_encoder.py
common/: CLEANUP_SUMMARY.md  base_pipeline.py  chunk_retrieval.py  colbert_udf.sql  compression_utils.py  config.py  connection_factory.py  connection_manager.py  connection_singleton.py  connector_interface.py  context_reduction.py  database.py  database_audit_middleware.py  database_schema_manager.py  db_driver_utils.py  db_init.py  db_init.sql  db_init.sql.fixed  db_init_community_2025.sql  db_init_complete.sql  db_init_iris_compatible.sql  db_init_licensed_vector.sql  db_init_simple.sql  db_init_simplified.sql  db_init_vector_fixed.sql  db_init_with_indexes.py  db_init_working_reality.sql  db_vector_search.py  db_vector_search.py.pre_table_fix  db_vector_search.py.pre_v2_update  db_vector_utils.py  dimension_utils.py  direct_iris_dbapi.py  embedding_utils.py  environment_manager.py  environment_utils.py  fixed_iris_dbapi.py  graphrag_cte.sql  huggingface_utils.py  iris_client.py  (+25 more)
comprehensive_ragas_results/: eval_all_ragas_1000.err
comprehensive_ragas_results_20250619_122754/: evaluation_summary.md  raw_results.json
comprehensive_ragas_results_20250619_122846/: evaluation_summary.md  raw_results.json
comprehensive_ragas_results_20250619_130638/: evaluation_summary.md  raw_results.json
comprehensive_ragas_results_20250619_130810/: evaluation_summary.md
config/: .coveragerc  api_config.yaml  basic_rag_example.yaml  cache_config.yaml  colbert_reconciliation_example.yaml  config.yaml  database_schema.yaml  default.yaml  iris-enhanced.cpf  loader.py  mcp_config.yaml  memory_config.yaml  monitoring.json  pipeline_profiles.yaml  pipelines.yaml  rag_integration.yaml  sync_config.yaml
core_pipelines/: __init__.py  basic_rag_pipeline.py  colbert_pipeline.py  crag_pipeline.py  graphrag_pipeline.py  hyde_pipeline.py  noderag_pipeline.py
crag/: __init__.py  pipeline.py  pipeline.py.pre_table_fix  pipeline_jdbc_fixed.py.pre_table_fix  pipeline_jdbc_fixed.py.pre_v2_update  pipeline_v2.py  pipeline_v2.py.pre_table_fix
data/: conservative_checkpoint.json  loader.py  loader_conservative_optimized.py  loader_fixed.py  loader_optimized_performance.py  loader_temp.py  loader_varchar_fixed.py  loader_vector_fixed.py  pmc_processor.py  unified_checkpoint.json  unified_loader.py
deprecated/: DEPRECATED_FILES_MANIFEST.md
dev/: raw_results.json
dev_ragas_results_local/: detailed_results_20250605_083205.csv
docker/: README.md
docs/: 1000_DOCUMENT_TESTING.md  100K_INGESTION_MONITORING_GUIDE.md  100K_VALIDATION_PIPELINE_FIXES_COMPLETE.md  API_REFERENCE.md  BAD_DOCUMENT_FLAG_DESIGN.md  BASIC_RAG_DEBUG_SUMMARY.md  BASIC_RAG_PERFORMANCE_ANALYSIS.md  BASIC_RAG_WORKING_SOLUTION.md  BENCHMARKING_CONSOLIDATION_GUIDE.md  BENCHMARK_DATASETS.md  BENCHMARK_EXECUTION_PLAN.md  BENCHMARK_RESULTS.md  BENCHMARK_SETUP.md  BUG_FIX_0.5.6_PACKAGE_REBUILD.md  CHANGELOG.md  CHUNKING_ARCHITECTURE_DESIGN.md  CHUNKING_COMPREHENSIVE_TEST_GUIDE.md  CHUNKING_CONFIG_TEMPLATE.yaml  CHUNKING_IMPLEMENTATION_PLAN.md  CHUNKING_IMPLEMENTATION_SPEC.md  CHUNKING_SYSTEM_ARCHITECTURE_DIAGRAM.md  CHUNKING_SYSTEM_FIXES.md  CHUNK_CONSUMPTION_GAP_ANALYSIS.md  CLAUDE.md  CLEANUP_LOG_PHASE1B.md  CLEANUP_MIGRATION_NOTES.md  CLI_RECONCILIATION_USAGE.md  COLBERT_AUTO_POPULATION_GUIDE.md  COLBERT_IMPLEMENTATION.md  COLBERT_PERFORMANCE_BREAKTHROUGH.md  COLBERT_RECONCILIATION_CONFIGURATION.md  COLUMN_MISMATCH_FIX_COMPLETE.md  COMPREHENSIVE_DBAPI_TEST.md  COMPREHENSIVE_DBAPI_VALIDATION_COMPLETE.md  COMPREHENSIVE_RAGAS_DBAPI_EVALUATION.md  COMPREHENSIVE_SCALING_EVALUATION_FRAMEWORK.md  CONFIGURATION.md  CONFIGURATION_REFACTORING_STRATEGY.md  (+193 more)
(+5430 files in other folders)
